# serializer version: 1
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-10-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-10-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-10-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-10-relevant_powers1-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-100-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-100-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-100-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-100-relevant_powers1-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-3-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-3-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-3-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point0-3-relevant_powers1-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-10-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-10-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-10-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-10-relevant_powers1-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-100-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-100-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-100-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-100-relevant_powers1-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-3-relevant_powers0-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-3-relevant_powers0-sgld]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-3-relevant_powers1-SGLD]
  0.0
# ---
# name: test_restricted_gradient_normalcrossing_between_dims[sample_point1-3-relevant_powers1-sgld]
  0.0
# ---
# name: test_rllc_different_from_full_llc_between_dims[relevant_powers0-SGLD]
  990.0466468475643
# ---
# name: test_rllc_different_from_full_llc_between_dims[relevant_powers0-sgld]
  990.0466468475643
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_10-powers_0_2-SGLD]
  9.599380427971482e-05
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_10-powers_0_2-sgld]
  9.599380427971482e-05
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_100-powers_0_2-SGLD]
  9.599380427971482e-05
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_100-powers_0_2-sgld]
  9.599380427971482e-05
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_3-powers_0_2-SGLD]
  9.599380427971482e-05
# ---
# name: test_rllc_full_normalcrossing_between_dims[sample_0.0_0.0_1.0-extra_dim_3-powers_0_2-sgld]
  9.599380427971482e-05
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers0-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers0-sgld]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers1-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers1-sgld]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers2-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point0-powers2-sgld]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers0-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers0-sgld]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers1-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers1-sgld]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers2-SGLD]
  0.0
# ---
# name: test_rllc_normalcrossing_between_powers[sample_point1-powers2-sgld]
  0.0
# ---
